--- a/tic.html
+++ b/tic.html
@@ -89,7 +89,7 @@
           
           <h4>Alpha-beta pruning</h4>
           <p>
-          Let's denote the best choice so far for the maximiser by <span style="display: inline" class="pseudocode-inline">alpha</span>, and the best choice so far for the minimiser by <span style="display: inline" class="pseudocode-inline"></span>beta</span>. Starting off with <span style="display: inline" class="pseudocode-inline">alpha = &#8722&#8734, beta = +&#8734</span>, we set off exploring the game tree. If we find a higher value for <span style="display: inline" class="pseudocode-inline">alpha</span> or a lower value for <span style="display: inline" class="pseudocode-inline">beta</span>, we update them. If <span style="display: inline" class="pseudocode-inline">alpha &#x2265 beta</span>, we don't go down that branch of the tree: it's guaranteed to not be a better option.
+          Let's denote the best choice so far for the maximiser by <span style="display: inline" class="pseudocode-inline">alpha</span>, and the best choice so far for the minimiser by <span style="display: inline" class="pseudocode-inline">beta</span>. Starting off with <span style="display: inline" class="pseudocode-inline">alpha = &#8722&#8734, beta = +&#8734</span>, we set off exploring the game tree. If we find a higher value for <span style="display: inline" class="pseudocode-inline">alpha</span> or a lower value for <span style="display: inline" class="pseudocode-inline">beta</span>, we update them. If <span style="display: inline" class="pseudocode-inline">alpha &#x2265 beta</span>, we don't go down that branch of the tree: it's guaranteed to not be a better option.
           </p>
           
           <p>
