--- a/tic.html
+++ b/tic.html
@@ -17,7 +17,7 @@
       <div class="tagline">How to make an AI that will never lose a game of Tic-Tac-Toe.</div>
     </p>
     <p>
-      Making an unbeatable AI may sound intimidating, so it helps to start learning the tricks through a very simple game like Tic-Tac-Toe.
+      Making an unbeatable game AI may sound intimidating, so it helps to start learning the tricks through a very simple game like Tic-Tac-Toe.
       </p>
       
       <h4>The game</h4>
