--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     about
   </div>
   <div class="page-body"> 
-    <p><b>Currently</b><br>Learning about AI and how to be a better programmer at the Recurse Center! <br> See my projects <a style="color: #fe6d73" href="projects.html">here</a>.</p>
+    <p><b>Currently</b><br>Learning how to be a better programmer at the Recurse Center! <br> See my projects <a style="color: #fe6d73" href="projects.html">here</a>.</p>
     <p><b>Previously</b><br>A quantum cryptography researcher at Oxford. <br> Worked on building secure protocols for quantum networks. <br> See my research <a style="color: #227c9d" href="research.html">here</a>.</p>
     <p><a style="color: black" href="mailto:anu@anu-unnikrishnan.com"><b>Contact me</b></a> &bull; <a style="color: black" href="CV.pdf"><b>CV</b></a></p>
     <br> <br> 
